Wed Apr  1 13:16:19 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_f_sleep): RDoc disambiguation.  [ruby-talk:332632]

Tue Mar 31 15:17:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fixed the help strings for the header and library
	  dir switches, and updated to use AS_HELP_STRING.  patches from
	  Richard Brown, c.f. [ruby-core:23067].

Mon Mar 31 08:18:57 2009  James Edward Gray II  <jeg2@ruby-lang.org>

	* test/csv/test_interface.rb, test/csv/test_serialization.rb:
	  Trying more fixes some failing tests on Windows.

Mon Mar 30 19:04:25 2009  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): show negative fixnum correctly.

Mon Mar 30 12:12:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): replaces the message if
	  frozen.  [ruby-dev:38208]

Mon Mar 30 01:00:20 2009  James Edward Gray II  <jeg2@ruby-lang.org>

	* test/csv/test_interface.rb: Trying a fix for some failing tests
	  on Windows.

Sun Mar 29 08:59:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pathname.rb (Pathname#relative_path_from): compares path
	  components according to system default case-sensitiveness.
	  [ruby-core:22829]

Sat Mar 28 11:10:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ruby.imp): all symbols in static library need to be
	  exported, so that encoding-extensions can be loaded.  based on a
	  patch from Yutaka Kanemoto <kinpoco AT gmail.com> a
	  [ruby-talk:332282].

Sat Mar 28 08:49:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): checks if named argument given twice.

	* sprintf.c (GETNAMEARG): remembers named arg is used, to get rid
	  of too many arguments warning.

Sat Mar 28 03:16:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command, cc_command, cpp_command): should no
	  override extout defined in extmk.rb.

Fri Mar 27 12:56:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
